<resources>
    <string name="app_name">DownloadManager</string>
    <string name="download">下载</string>
    <string name="pause">暂停</string>
    <string name="open">打开</string>
    <string name="fail">失败</string>
    <string name="continue_download">继续</string>
    <string name="title">标题</string>
    <string name="is_delete_task">删除任务？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="settings">设置</string>
    <string name="current_path">当前路径</string>
    <string name="file_save_path">文件保存目录</string>
    <string name="download_notification_channel_id">download_notification_channel_id</string>
    <string name="download_notification_channel_name">下载通知</string>
    <string name="copy_download_link">复制下载链接</string>
    <string name="remind">提示</string>
    <string name="is_delete_file">删除文件</string>
    <string name="choose_save_dir">选择保存目录</string>
    <string name="delete_task">删除任务</string>
    <string name="delete_file">删除文件</string>
    <string name="copy_success">复制成功</string>
    <string name="waiting">等待中...</string>
    <string name="create_task">创建下载任务</string>
    <string name="please_input_url">请输入url</string>
    <string name="thread_count">线程数量</string>
    <string name="add_to_queue">加入队列</string>
    <string name="please_input_thread_count">请输入线程数量</string>
    <string name="test_dialog">弹窗测试</string>
    <string name="test_dialog_bottom_sheet">BottomSheet弹窗测试</string>
    <string name="restart_download">重新下载</string>
    <string name="download_link">下载链接</string>
    <string name="please_input_save_name">请输入文件名称</string>
    <string name="save_name">保存名称</string>
    <string name="look_part_info">显示线程信息</string>
    <string name="max_running_task_count">最大同时下载任务数量</string>
    <string name="please_input_max_running_task_count">请输入最大同时下载任务数量</string>
    <string name="file_save_dir">文件保存目录</string>
    <string name="please_input_save_dir">请输入文件保存路径</string>
    <string name="web_view">浏览器</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="choose_image_with_qrcode">识别二维码图片</string>
    <string name="decode_qrcode">识别二维码</string>
    <string name="qr_code_not_found">未发现二维码</string>
    <string name="qr_code_decode_fail">二维码识别失败</string>
    <string name="please_check_your_internet">请检查网络连接</string>
    <string name="cannot_found_app_to_process">无法找到处理的应用</string>
    <string name="installed_plugin">已安装插件</string>
    <string name="download_right_now">立即下载</string>
    <string name="add_link">添加链接</string>
    <string name="open_file_dir">打开文件所在目录</string>
    <string name="http_download_thread_size">Http下载任务线程数量</string>
    <string name="file_logo">file logo</string>
    <string name="debug_mode">调式模式</string>
    <string name="debug_switch">开关</string>
    <string name="file_not_exists">已删除</string>
    <string name="background">background</string>
    <string name="app_version">版本：%s</string>
    <string name="look_up_qr_code">查看二维码</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="media_file_refresh">媒体文件库刷新</string>

</resources>
