<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_task"
        android:title="@string/create_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan_qr_code"
        android:title="@string/scan_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/choose_image_with_qrcode"
        android:title="@string/choose_image_with_qrcode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/web_view"
        android:title="@string/web_view"
        app:showAsAction="never" />
</menu>