<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bt_copy_link"
        style="@style/TaskOperationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_download_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bt_delete_task"
        style="@style/TaskOperationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_copy_link" />


    <TextView
        android:id="@+id/bt_cancel"
        style="@style/TaskOperationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_delete_task" />

</android.support.constraint.ConstraintLayout>